# pyjacker

./: Dockerfile  LICENSE  README.md  breakpoints.py  config.py  config_AML.yaml  enhancer_hijacking.py  html_reports.py  monoallelic_expression.py  outlier_expression.py  pyjacker.py  pyproject.toml
.github/workflows/: docker-publish.yml
data/: CNAs_ckAML.tsv  Dixon_IMR90_hg19_liftover.bed  HSPC_TADs.bed  TADs_Dixon_IMR90_hg38.bed  breakpoints.tsv  enhancers_HSPC.bed  enhancers_myeloid.tsv  fusions.tsv  imprinted_genes.txt
data/ASE_ckAML/: 15KM12995.tsv  15KM15252.tsv  15KM15533.tsv  15KM18301.tsv  15KM18498.tsv  15KM18875.tsv  15KM19129.tsv  15KM19963.tsv  15KM20146.tsv  15KM22156.tsv  15PB17699.tsv  15PB19164.tsv  15PB19457.tsv  15PB8708.tsv  15PB9630.tsv  16KM0672.tsv  16KM11270.tsv  16KM11419.tsv  16KM1213.tsv  16KM16045.tsv  16KM16320.tsv  16KM1892.tsv  16KM4020.tsv  16KM4660.tsv  16PB12474.tsv  16PB12553.tsv  16PB1441.tsv  16PB15826.tsv  16PB2067.tsv  16PB2829.tsv  16PB3075.tsv  16PB3147.tsv  16PB4200.tsv  16PB5058.tsv  16PB5693.tsv  16PB8681.tsv  16PB8705.tsv  16PB8733.tsv  16PB9113.tsv
pyjacker/: __main__.py  ase.py  breakpoints.py  cna.py  genes.py  html_reports.py  outlier_expression.py  pyjacker.py
